# avdemo

./: .gitignore  settings.gradle
app1/: build.gradle
app1/libs/: jiaozivideoplayer-6.3.1.aar
app1/src/androidTest/java/com/example/app1/: ExampleInstrumentedTest.java
app1/src/main/: AndroidManifest.xml
app1/src/main/java/com/example/app1/: MainActivity.java
app1/src/main/res/layout/: activity_main.xml
applib1/: CMakeLists.txt  build.gradle
applib1/src/androidTest/java/com/example/applib1/: ExampleInstrumentedTest.java
applib1/src/main/: AndroidManifest.xml
applib1/src/main/java/com/example/applib1/: Human.java  JniFFmpegConfig.java  JniTest.java  Man.java  PermissionManager.java
applib1/src/main/java/com/example/applib1/pushstream/: AudioPusher.java  LivePusher.java  PushNative.java  Pusher.java  VideoPusher.java
applib1/src/main/java/com/example/applib1/pushstream/listener/: LiveStateChangeListener.java
applib1/src/main/java/com/example/applib1/pushstream/params/: AudioParam.java  VideoParam.java
applib1/src/main/java/com/example/applib1/view/: VideoView.java
applib1/src/main/jni/: lh-jni-lib-1.c  lh_ffmpeg_player_use_yuv.c  lh_player.c  lh_push.c  lh_push_queue.c  queue.c
applib1/src/main/jni/include/: lh-jni.h  lh_push_queue.h  queue.h
applib1/src/test/java/com/example/applib1/: ExampleUnitTest.java
av_sample/: build.gradle
av_sample/src/androidTest/java/com/example/av_sample/: ExampleInstrumentedTest.java
av_sample/src/main/: AndroidManifest.xml
av_sample/src/main/java/com/example/av_sample/: MainActivity.java  PermissionManager.java
av_sample/src/main/java/com/example/av_sample/audiorecord/: AudioRecordTest.java
av_sample/src/main/java/com/example/av_sample/collectvcameradata/: SurfaceCameraTest.java
av_sample/src/main/java/com/example/av_sample/drawbitmap/: CustomView.java  DrawBitmapActivity.java
av_sample/src/main/java/com/example/av_sample/media_extractor_muxer/: MediaExtracotrMuxer.java
av_sample/src/main/java/com/example/av_sample/muxer/: AudioEncoderThread.java  FileUtils.java  MediaMuxerActivity.java  MediaMuxerThread.java  VideoEncoderThread.java
av_sample/src/main/java/com/example/av_sample/muxer0/: AudioEncodeThread.java  FileUtils.java  MediaMuxerActivity.java  MediaMuxerThread.java  VideoEncodeThread.java
av_sample/src/main/java/com/example/av_sample/only264/: H264Encoder.java  Only264Test.java
av_sample/src/main/java/com/example/av_sample/opengles/: MyGLSurfaceView.java  MyGLSurfaceViewRenderer.java  MyGLSurfaceViewRenderer2.java  OpenGLES20Activity.java  ShaderUtil.java  Square.java  Triangle.java
av_sample/src/main/java/com/example/av_sample/opengles/sample/: ColorfulTriangle.java  MyGLSurfaceView.java  MyGLSurfaceViewRenderer.java  MyGLSurfaceViewRenderer2.java  MyGLSurfaceViewRenderer3.java  OpenGLES20Activity.java  ShaderUtil.java  Square.java  Triangle.java
av_sample/src/main/java/com/example/av_sample/opengles/study/: StudyOpenGLES20Activity.java
av_sample/src/main/java/com/example/av_sample/opengles/study/base/: BaseGLSL.java  BaseGLSuifaceView.java  BaseGLSurfaceView.java
av_sample/src/main/java/com/example/av_sample/opengles/study/glsv/: OvalGLSurfaceView.java  SquareSurfaceView.java  TriangleGLSurfaceView.java
av_sample/src/main/java/com/example/av_sample/opengles/study/shape/oval/: Cone.java  Cylinder.java  Oval.java
av_sample/src/main/java/com/example/av_sample/opengles/study/shape/square/: Cube.java  Square.java  VaryMatrixCube.java
av_sample/src/main/java/com/example/av_sample/opengles/study/shape/triangle/: CameraTriangle.java  ColorfulTriangle.java  TriangleStudy.java
av_sample/src/main/java/com/example/av_sample/util/: PcmToWavUtil.java
av_sample/src/main/res/layout/: activity_carema_test.xml  activity_draw_bitmap.xml  activity_main.xml  activity_media_muxer.xml
av_sample/src/main/res/values/: strings.xml
av_sample/src/test/java/com/example/av_sample/: ExampleUnitTest.java
bushou1/: build.gradle  signing.properties
bushou1/src/androidTest/java/com/example/bushou1/: ExampleInstrumentedTest.java
bushou1/src/main/: AndroidManifest.xml
bushou1/src/main/java/com/example/bushou1/: AlarmReceiver.java  CouponBean.java  CustomTestService.java  HttpUtil.java  LongRunningService.java  MainActivity.java  NotificationUtils.java  SPUtils.java  ddd.java
bushou1/src/main/res/layout/: activity_main.xml
bushou1/src/main/res/values/: strings.xml
bushou1/src/test/java/com/example/bushou1/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
